kube/order-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - name: order-api
        image: ecomacrdev001.azurecr.io/order-api:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: order-api-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3002
  selector:
    app: order-api
