kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: 20.200.88.242.nip.io
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-api-service
            port:
              number: 80

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-api-service
            port:
              number: 80

      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-api-service
            port:
              number: 80
